--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,6 @@
 @import "tailwindcss";
 
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -20,7 +21,7 @@
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
+  background: rgb(241, 241, 195);
+  color: black;
   font-family: Arial, Helvetica, sans-serif;
 }
